fix: box shadow not covering width of navbar

--- a/src/styles/layout/_nav.scss
+++ b/src/styles/layout/_nav.scss
@@ -8,8 +8,7 @@
     
     .nav-contents {
         list-style-type: none;
-        padding: 0;
-        margin: 0 $end-margin-spacing;
+        padding: 0 $end-margin-spacing;
         display: flex;
         flex-direction: row;
         justify-content: center;
